add-opens for lmdb